oa_ex1/Makefile - edits

--- a/examples/oa_ex1/Makefile
+++ b/examples/oa_ex1/Makefile
@@ -1,14 +1,14 @@
-PROJECT_ROOT_PATH = $(HOME)
+LIBRARY_ROOT_PATH = $(HOME)
 
 COMMON_CLASSES_VERSION = cmnclass.1
 COMMON_CLASSES_LIB_NAME = lib$(COMMON_CLASSES_VERSION).a
-COMMON_CLASSES_INC_PATH = $(PROJECT_ROOT_PATH)/include/$(COMMON_CLASSES_VERSION)/
+COMMON_CLASSES_INC_PATH = $(LIBRARY_ROOT_PATH)/include/$(COMMON_CLASSES_VERSION)/
 
 OPTALG_VERSION = optalg.1
 OPTALG_LIB_NAME = lib$(OPTALG_VERSION).a
-OPTALG_INC_PATH = $(PROJECT_ROOT_PATH)/include/$(OPTALG_VERSION)/
+OPTALG_INC_PATH = $(LIBRARY_ROOT_PATH)/include/$(OPTALG_VERSION)/
 
-PROJECT_INCLUDES = -I$(PROJECT_ROOT_PATH)/include/ \
+LIBRARY_INCLUDES = -I$(LIBRARY_ROOT_PATH)/include/ \
 		-I$(COMMON_CLASSES_INC_PATH) \
 		-I$(OPTALG_INC_PATH)
 
@@ -19,7 +19,7 @@ PROJECT_INCLUDES = -I$(PROJECT_ROOT_PATH)/include/ \
 OPTFLAGS = -g -Wall
 
 
-CFLAGS = $(OPTFLAGS) $(PROJECT_INCLUDES)
+CFLAGS = $(OPTFLAGS) $(LIBRARY_INCLUDES)
 
 
 CC = g++
@@ -29,9 +29,9 @@ CC = g++
 LINK =  \
 	-l$(COMMON_CLASSES_VERSION) \
 	-l$(OPTALG_VERSION) \
-	-L$(PROJECT_ROOT_PATH)/lib -lcmnclass \
+	-L$(LIBRARY_ROOT_PATH)/lib -lcmnclass \
 	-lm -lstdc++ -lgmp -lgmpxx \
-	$(MYSQL_LINK) $(OPENGL_LINK) -pthread
+	-pthread
 
 
 
@@ -51,6 +51,6 @@ main.o:		main.cpp
 		$(CC) $(CFLAGS) -c main.cpp
 
 oa_ex1:		main.o \
-		$(PROJECT_ROOT_PATH)/lib/lib$(OPTALG_VERSION).a
+		$(LIBRARY_ROOT_PATH)/lib/lib$(OPTALG_VERSION).a
 		$(CC) $(CFLAGS) main.o $(LINK) -o oa_ex1
 
